--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid-spring-boot-starter</artifactId>
-                <version>${druid-spring-boot-starter}</version>
+                <version>${druid-spring-boot-starter.version}</version>
             </dependency>
 
             <dependency>
