--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.8.RELEASE</version>
+        <version>2.1.9.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -29,33 +29,35 @@
     <properties>
         <java.version>1.8</java.version>
         <spring-cloud.version>Greenwich.RELEASE</spring-cloud.version>
-        <springframework.version>2.1.8.RELEASE</springframework.version>
+        <springframework.version>2.1.9.RELEASE</springframework.version>
         <spring-boot-admin.version>2.1.6</spring-boot-admin.version>
-        <spring-cloud-starter-config.version>2.1.0.RELEASE</spring-cloud-starter-config.version>
+        <spring-cloud-starter-config.version>2.1.4.RELEASE</spring-cloud-starter-config.version>
 
-        <druid-spring-boot-starter.version>1.1.18</druid-spring-boot-starter.version>
+        <druid-spring-boot-starter.version>1.1.20</druid-spring-boot-starter.version>
         <mybatis-spring-boot-starter.version>2.1.0</mybatis-spring-boot-starter.version>
-        <pagehelper-spring-boot-starter.version>1.2.10</pagehelper-spring-boot-starter.version>
+        <pagehelper-spring-boot-starter.version>1.2.12</pagehelper-spring-boot-starter.version>
 
         <jasypt-spring-boot-starter.version>2.1.1</jasypt-spring-boot-starter.version>
-        <aliyun-java-sdk-core.version>4.4.3</aliyun-java-sdk-core.version>
+        <aliyun-java-sdk-core.version>4.4.6</aliyun-java-sdk-core.version>
         <aliyun-sdk-oss.version>3.6.0</aliyun-sdk-oss.version>
-        <fastjson.version>1.2.61</fastjson.version>
+        <fastjson.version>1.2.62</fastjson.version>
         <aliyun-java-sdk-dysmsapi.version>1.1.0</aliyun-java-sdk-dysmsapi.version>
         <jackson-annotations.version>2.9.9</jackson-annotations.version>
         <alipay-sdk-java.version>4.3.0.ALL</alipay-sdk-java.version>
 
         <commons-lang3.version>3.9</commons-lang3.version>
         <commons-beanutils.version>1.9.3</commons-beanutils.version>
-        <okhttp.version>4.1.0</okhttp.version>
+        <okhttp.version>4.2.2</okhttp.version>
         <zxing.version>3.4.0</zxing.version>
-        <UserAgentUtils.version>1.21</UserAgentUtils.version>
         <jsoup.version>1.12.1</jsoup.version>
 
         <druid.version>1.1.20</druid.version>
         <weixin.java.version>3.5.0</weixin.java.version>
-        <elasticsearch.version>7.3.0</elasticsearch.version>
+        <elasticsearch.version>7.4.0</elasticsearch.version>
         <mybatis.version>3.5.2</mybatis.version>
+
+        <hutool.version>4.6.10</hutool.version>
+        <guava.version>28.1-jre</guava.version>
 
         <wkclz.excel>1.0.11-SNAPSHOT</wkclz.excel>
         <lz-sdk.version>0.0.1-SNAPSHOT</lz-sdk.version>
@@ -107,6 +109,16 @@
             <version>${druid.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>${hutool.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>com.wkclz.lz</groupId>
@@ -228,6 +240,13 @@
                 <artifactId>javase</artifactId>
                 <version>${zxing.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>28.1-jre</version>
+            </dependency>
+
 
             <!-- 浏览器信息分析 -->
             <dependency>
