--- a/pom.xml
+++ b/pom.xml
@@ -121,7 +121,7 @@
         </dependency>
 
         <dependency>
-            <groupId>com.wkclz.lz</groupId>
+            <groupId>com.wkclz.starter</groupId>
             <artifactId>lz-spring-boot-starter</artifactId>
             <version>${lz-spring-boot-starter.version}</version>
         </dependency>
