--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.9.RELEASE</version>
+        <version>2.2.1.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -28,10 +28,10 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <spring-cloud.version>Greenwich.RELEASE</spring-cloud.version>
-        <springframework.version>2.1.9.RELEASE</springframework.version>
-        <spring-boot-admin.version>2.1.6</spring-boot-admin.version>
-        <spring-cloud-starter-config.version>2.1.4.RELEASE</spring-cloud-starter-config.version>
+        <spring-cloud.version>Hoxton.RELEASE</spring-cloud.version>
+        <springframework.version>2.2.1.RELEASE</springframework.version>
+        <spring-boot-admin.version>2.2.0</spring-boot-admin.version>
+        <spring-cloud-starter-config.version>2.2.1.RELEASE</spring-cloud-starter-config.version>
 
         <druid-spring-boot-starter.version>1.1.20</druid-spring-boot-starter.version>
         <mybatis-spring-boot-starter.version>2.1.0</mybatis-spring-boot-starter.version>
