--- a/pom.xml
+++ b/pom.xml
@@ -341,13 +341,14 @@
 
     <distributionManagement>
         <repository>
-            <id>nexus</id>
-            <name>nexus</name>
-            <url>file:${user.home}/project/lz-cloud/mvn-repository</url>
+            <id>wkclz-release</id>
+            <name>wkclz-release</name>
+            <url>http://mvn.wkclz.com/repository/wkclz-release/</url>
         </repository>
         <snapshotRepository>
-            <id>Nexus Snapshot</id>
-            <url>file:${user.home}/project/lz-cloud/mvn-repository</url>
+            <id>wkclz-snapshot</id>
+            <name>wkclz-snapshot</name>
+            <url>http://mvn.wkclz.com/repository/wkclz-snapshot/</url>
         </snapshotRepository>
     </distributionManagement>
 
