--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,7 @@
         <guava.version>28.2-jre</guava.version>
 
         <wkclz.excel>1.0.11-SNAPSHOT</wkclz.excel>
+        <lz.version>3.1.0-SNAPSHOT</lz.version>
         <lz-sdk.version>3.1.0-SNAPSHOT</lz-sdk.version>
         <lz-core.version>3.1.0-SNAPSHOT</lz-core.version>
         <lz-spring-boot-starter.version>3.1.0-SNAPSHOT</lz-spring-boot-starter.version>
@@ -338,6 +339,18 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>com.wkclz.gen</groupId>
+                    <artifactId>lz-gen-plugin</artifactId>
+                    <version>${lz.version}</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 
     <distributionManagement>
         <repository>
