--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.4.RELEASE</version>
+        <version>2.3.0.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -29,35 +29,35 @@
     <properties>
         <java.version>1.8</java.version>
         <spring-cloud.version>Hoxton.RELEASE</spring-cloud.version>
-        <springframework.version>2.2.4.RELEASE</springframework.version>
-        <spring-boot-admin.version>2.2.1</spring-boot-admin.version>
-        <spring-cloud-starter-config.version>2.2.1.RELEASE</spring-cloud-starter-config.version>
+        <springframework.version>2.3.0.RELEASE</springframework.version>
+        <spring-boot-admin.version>2.2.3</spring-boot-admin.version>
+        <spring-cloud-starter-config.version>2.2.3.RELEASE</spring-cloud-starter-config.version>
 
-        <druid-spring-boot-starter.version>1.1.21</druid-spring-boot-starter.version>
-        <mybatis-spring-boot-starter.version>2.1.1</mybatis-spring-boot-starter.version>
+        <druid-spring-boot-starter.version>1.1.22</druid-spring-boot-starter.version>
+        <mybatis-spring-boot-starter.version>2.1.2</mybatis-spring-boot-starter.version>
         <pagehelper-spring-boot-starter.version>1.2.12</pagehelper-spring-boot-starter.version>
 
-        <jasypt-spring-boot-starter.version>2.1.1</jasypt-spring-boot-starter.version>
-        <aliyun-java-sdk-core.version>4.4.6</aliyun-java-sdk-core.version>
-        <aliyun-sdk-oss.version>3.6.0</aliyun-sdk-oss.version>
-        <fastjson.version>1.2.62</fastjson.version>
-        <aliyun-java-sdk-dysmsapi.version>1.1.0</aliyun-java-sdk-dysmsapi.version>
-        <jackson-annotations.version>2.9.9</jackson-annotations.version>
-        <alipay-sdk-java.version>4.3.0.ALL</alipay-sdk-java.version>
+        <jasypt-spring-boot-starter.version>3.0.3</jasypt-spring-boot-starter.version>
+        <aliyun-java-sdk-core.version>4.5.1</aliyun-java-sdk-core.version>
+        <aliyun-sdk-oss.version>3.9.1</aliyun-sdk-oss.version>
+        <fastjson.version>1.2.70</fastjson.version>
+        <aliyun-java-sdk-dysmsapi.version>2.1.0</aliyun-java-sdk-dysmsapi.version>
+        <jackson-annotations.version>2.11.0</jackson-annotations.version>
+        <alipay-sdk-java.version>4.10.0.ALL</alipay-sdk-java.version>
 
-        <commons-lang3.version>3.9</commons-lang3.version>
-        <commons-beanutils.version>1.9.3</commons-beanutils.version>
-        <okhttp.version>4.2.2</okhttp.version>
+        <commons-lang3.version>3.10</commons-lang3.version>
+        <commons-beanutils.version>1.9.4</commons-beanutils.version>
+        <okhttp.version>4.7.2</okhttp.version>
         <zxing.version>3.4.0</zxing.version>
-        <jsoup.version>1.12.1</jsoup.version>
+        <jsoup.version>1.13.1</jsoup.version>
 
-        <druid.version>1.1.21</druid.version>
-        <weixin.java.version>3.6.0</weixin.java.version>
-        <elasticsearch.version>7.5.2</elasticsearch.version>
-        <mybatis.version>3.5.3</mybatis.version>
+        <druid.version>1.1.22</druid.version>
+        <weixin.java.version>3.8.0</weixin.java.version>
+        <elasticsearch.version>7.7.0</elasticsearch.version>
+        <mybatis.version>3.5.4</mybatis.version>
 
-        <hutool.version>5.1.1</hutool.version>
-        <guava.version>28.2-jre</guava.version>
+        <hutool.version>5.3.6</hutool.version>
+        <guava.version>29.0-jre</guava.version>
 
         <wkclz.excel>1.0.11-SNAPSHOT</wkclz.excel>
         <lz.version>3.1.0-SNAPSHOT</lz.version>
@@ -248,7 +248,7 @@
             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
-                <version>28.1-jre</version>
+                <version>${guava.version}</version>
             </dependency>
 
 
