--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
 
         <hutool.version>5.3.6</hutool.version>
         <guava.version>29.0-jre</guava.version>
+        <UserAgentUtils.version>1.21</UserAgentUtils.version>
 
         <wkclz.excel>1.0.11-SNAPSHOT</wkclz.excel>
         <lz.version>3.1.0-SNAPSHOT</lz.version>
