--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,10 @@
                 <version>${mybatis-spring-boot-starter.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-validation</artifactId>
+            </dependency>
+            <dependency>
                 <groupId>com.github.pagehelper</groupId>
                 <artifactId>pagehelper-spring-boot-starter</artifactId>
                 <version>${pagehelper-spring-boot-starter.version}</version><!-- do not update this version, new version is not compatible -->
