--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,8 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.0.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <version>2.3.4.RELEASE</version>
+        <relativePath/>
     </parent>
 
     <groupId>com.wkclz.parent</groupId>
@@ -29,18 +29,18 @@
     <properties>
         <java.version>1.8</java.version>
         <spring-cloud.version>Hoxton.RELEASE</spring-cloud.version>
-        <springframework.version>2.3.0.RELEASE</springframework.version>
-        <spring-boot-admin.version>2.2.3</spring-boot-admin.version>
-        <spring-cloud-starter-config.version>2.2.3.RELEASE</spring-cloud-starter-config.version>
+        <springframework.version>2.3.4.RELEASE</springframework.version>
+        <spring-boot-admin.version>2.3.0</spring-boot-admin.version>
+        <spring-cloud-starter-config.version>2.2.5.RELEASE</spring-cloud-starter-config.version>
 
-        <druid-spring-boot-starter.version>1.1.22</druid-spring-boot-starter.version>
-        <mybatis-spring-boot-starter.version>2.1.2</mybatis-spring-boot-starter.version>
+        <druid-spring-boot-starter.version>1.1.24</druid-spring-boot-starter.version>
+        <mybatis-spring-boot-starter.version>2.1.3</mybatis-spring-boot-starter.version>
         <pagehelper-spring-boot-starter.version>1.2.12</pagehelper-spring-boot-starter.version>
 
         <jasypt-spring-boot-starter.version>3.0.3</jasypt-spring-boot-starter.version>
         <aliyun-java-sdk-core.version>4.5.1</aliyun-java-sdk-core.version>
         <aliyun-sdk-oss.version>3.9.1</aliyun-sdk-oss.version>
-        <fastjson.version>1.2.70</fastjson.version>
+        <fastjson.version>1.2.73</fastjson.version>
         <aliyun-java-sdk-dysmsapi.version>2.1.0</aliyun-java-sdk-dysmsapi.version>
         <jackson-annotations.version>2.11.0</jackson-annotations.version>
         <alipay-sdk-java.version>4.10.0.ALL</alipay-sdk-java.version>
@@ -51,12 +51,12 @@
         <zxing.version>3.4.0</zxing.version>
         <jsoup.version>1.13.1</jsoup.version>
 
-        <druid.version>1.1.22</druid.version>
+        <druid.version>1.1.24</druid.version>
         <weixin.java.version>3.8.0</weixin.java.version>
         <elasticsearch.version>7.7.0</elasticsearch.version>
         <mybatis.version>3.5.4</mybatis.version>
 
-        <hutool.version>5.3.6</hutool.version>
+        <hutool.version>5.4.3</hutool.version>
         <guava.version>29.0-jre</guava.version>
         <UserAgentUtils.version>1.21</UserAgentUtils.version>
 
