不指定上传，只上传阿里云

--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,20 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.junit.vintage</groupId>
+                    <artifactId>junit-vintage-engine</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.junit.jupiter</groupId>
+                    <artifactId>junit-jupiter</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.mockito</groupId>
+                    <artifactId>mockito-junit-jupiter</artifactId>
+                </exclusion>
+            </exclusions>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -358,18 +372,5 @@
             </plugins>
         </pluginManagement>
     </build>
-
-    <distributionManagement>
-        <repository>
-            <id>wkclz-release</id>
-            <name>wkclz-release</name>
-            <url>http://mvn.wkclz.com/repository/wkclz-release/</url>
-        </repository>
-        <snapshotRepository>
-            <id>wkclz-snapshot</id>
-            <name>wkclz-snapshot</name>
-            <url>http://mvn.wkclz.com/repository/wkclz-snapshot/</url>
-        </snapshotRepository>
-    </distributionManagement>
 
 </project>
